-------------------------------

Bugfixes

* Import statements with file paths containing . no longer break
  the HTML exporter
* Quote filenames when making shell calls  
  (#115, reported by @JimmyZJX)
* Asserting trivial facts incorrectly left variables instantiated  
  (#113, reported by Jinxu Zhao)
* Fully check that types are well-formed  
  (#128, reported by @RandomActsOfGrammar)


Changes in 2.0.6 from 2.0.5
---------------------------

Additions

* The schematic polymorphism branch has been merged.

  You can read more about it here:

     http://abella-prover.org/schm-poly/index.html

  Thanks to Yuting Wang and Gopalan Nadathur for developing the theory
  to match the implementation by Yuting.


Tweaks to existing functionality

* Polymorphic definitions and theorems in the style of version 2.0.5
  are now recast in the style of schematic polymorphism in 2.0.6.
  There should be minimal user-visible impact.


Bugfixes

* Confusing nominal and other constants in eta-contraction
  #110 (Reported by Yuting Wang)
* Permutations of nominal constants in equivariant
  matching failed to respect types.
  #107 (Reported by Matija Pretnar)
* Error in renaming of bound variabls in metaterms.
  #106 (Reported by Yuting Wang)
* Incorrect pretty-printing of `(pi x\ p x)`.
  #104 (Reported by Dan DaCosta)


Changes in 2.0.5 from 2.0.4
---------------------------

Additions

* Added support for (first-order) polymorphic definitions. Definitions
  such as the following are now accepted.

        Define fresh : A -> B -> prop by
          nabla x, fresh x M.

  In every use of the definition, the type arguments are implicitly
  instantiated. The type-checking *for* such definitions is identical to
  taking all the unbound variable names and quantifying them on the outside.
  In other words, for the above definition, the behavior of type-checking is
  the same as if there were:

        Kind A,B  type
        Define fresh : A -> B -> prop by
          nabla x, fresh x M.
